third_party/move/move-compiler-v2/tests/ability-check/v1-signer/move_to_non_resource.exp

Diagnostics:
error: type `R` is missing required ability `key` (type was inferred)
  ┌─ tests/ability-check/v1-signer/move_to_non_resource.move:4:9
  │
4 │         move_to(s, R { f: false })
  │         ^^^^^^^
  │
  = required by instantiating type parameter `T:key` of function `move_to`

error: type `R<bool>` is missing required ability `key` (type was inferred)
   ┌─ tests/ability-check/v1-signer/move_to_non_resource.move:14:14
   │
14 │         () = move_to(s, R { f: false })
   │              ^^^^^^^
   │
   = required by instantiating type parameter `T:key` of function `move_to`
